--- a/src/app/pages/findStore-lion/find-store/find-store.component.css
+++ b/src/app/pages/findStore-lion/find-store/find-store.component.css
@@ -39,4 +39,6 @@
     grid-template-columns: repeat(auto-fill, minmax(400px, 400px));
     margin-top: 50px;
     justify-content: space-around;
+
+    padding-bottom: 10rem;
 }
