implement de la methode add item to cart

--- a/src/app/pages/detail-product-jean/detail-product-child-jean/quick-description-product-jean/quick-description-product-jean.component.html
+++ b/src/app/pages/detail-product-jean/detail-product-child-jean/quick-description-product-jean/quick-description-product-jean.component.html
@@ -40,6 +40,6 @@
                 </tbody>
             </table>
         </div>
-        <app-quantity-and-cart-btn-jean [stockInventory]="product?.stock"></app-quantity-and-cart-btn-jean>
+        <app-quantity-and-cart-btn-jean [product]="product"></app-quantity-and-cart-btn-jean>
     </div>
 </div>
