--- a/src/app/pages/panier/panier.component.css
+++ b/src/app/pages/panier/panier.component.css
@@ -1,4 +1,4 @@
-.form-select {
+/*.form-select {
     width: auto;
 }
 
@@ -23,4 +23,12 @@
 
 img {
     padding: 15px;
+}*/
+
+.container{
+    height: 100vh;
+}
+.container h1{
+    margin-top: 25px;
+
 }
