--- a/src/app/pages/panier/panier.component.html
+++ b/src/app/pages/panier/panier.component.html
@@ -1,11 +1,27 @@
-<div class="container" style="margin:50; padding:0">
+<div class="container">
     <div class="row">
-        <h1>Shopping Cart</h1>
-        <a href="#">Deselect all items</a>
+        <h1 class="display-4">Shopping Cart</h1>
+        <div class="col-2">
+            <button class="btn btn-secondary">Deselect all items</button>
+        </div>
+
     </div>
-    <div id="row-page" class="row">
+
+    <div class="row">
+            <div class="col-8">
+                <app-item-in-cart></app-item-in-cart>
+                <!--THIS IS THE NGFOR FOR THE ITEMS-->
+            </div>
+            
+            <div class="col-4">
+                <app-sub-total></app-sub-total>
+                <!--THIS SHOULD BE THE AUTO GENERATION OF THE SUBTOTAL-->
+            </div>
+    </div>
 
 
-
+    <div class="row">
+        
+        <!--HERE THERE SHOULD BE THE ROW WITH THE SUBTOTAL COMPONENT-->
     </div>
 </div>
