ajustement au html panier

--- a/src/app/shared/header-jean/header.component.html
+++ b/src/app/shared/header-jean/header.component.html
@@ -28,7 +28,7 @@
                 <img class="imgIcon" src="assets/images/icons/Profil.svg" alt="account_icon">
                 <div class="txtIcon">Account</div>
             </a>
-            <a class="btnIcon text-center" href="">
+            <a class="btnIcon text-center" routerLink="/cart">
                 <img class="imgIcon" src="assets/images/icons/cart.svg" alt="cart_icon">
                 <div class="txtIcon">Cart</div>
             </a>
@@ -50,7 +50,7 @@
     <a class="btnIcon text-center" href="">
         <img class="imgIcon" src="assets/images/icons/Profil.svg" alt="account_icon">
     </a>
-    <a class="btnIcon text-center" href="">
+    <a class="btnIcon text-center" routerLink="/cart">
         <img class="imgIcon" src="assets/images/icons/cart.svg" alt="cart_icon">
     </a>
 </div>
