added couponCode component to html of Panier

--- a/src/app/pages/panier/panier.component.html
+++ b/src/app/pages/panier/panier.component.html
@@ -21,7 +21,7 @@
 
 
     <div class="row">
-        
+        <app-coupon-code></app-coupon-code>
         <!--HERE THERE SHOULD BE THE ROW WITH THE SUBTOTAL COMPONENT-->
     </div>
 </div>
