--- a/src/app/pages/support-lion/support-lion.component.html
+++ b/src/app/pages/support-lion/support-lion.component.html
@@ -1,4 +1,4 @@
-<div id="imgContainer" class="container">
+<div id="imgContainer" class="container-fluid">
     <div class="row">
         <div class="col-xs-12">
             <img src="assets/images/support/support.jpg" class="support-image">
@@ -31,7 +31,7 @@
                     <div class="accordion" id="accordionExample">
                         <div class="accordion-item">
                             <h2 class="accordion-header">
-                                <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                <button class="accordion-button-collapsed" type="button" data-bs-toggle="collapse"
                                     data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                                     Are you open on holidays?
                                 </button>
