--- a/src/app/pages/panier/sub-total/sub-total.component.html
+++ b/src/app/pages/panier/sub-total/sub-total.component.html
@@ -12,9 +12,9 @@
                         <button type="button" class="btn btn-primary">Continue Shopping</button>
                     </div>
 
-                    <div class="row mb-3">
-                        <button type="button" class="btn btn-primary">Proceed to method of payment</button>
-                    </div>
+                    <a class="row mb-3">
+                        <button type="button" routerLink="cart/confirmationTransaction" class="btn btn-primary">Proceed to method of payment</button>
+                    </a>
                 </div>
             </div>
         </div>
