--- a/src/app/pages/payment-matt/confirmation/cart-confirmation/cart-confirmation.component.css
+++ b/src/app/pages/payment-matt/confirmation/cart-confirmation/cart-confirmation.component.css
@@ -88,7 +88,7 @@ h3{
 }
 
 .narrow-input{
-    width:calc(25%-8px);
+    width:calc(25% - 8px);
     height: 40px;
     max-width:100px;
     padding:8px;
