--- a/src/app/pages/detail-category-jean/detail-category-child-jean/product-filter-jean/product-filter-jean.component.css
+++ b/src/app/pages/detail-category-jean/detail-category-child-jean/product-filter-jean/product-filter-jean.component.css
@@ -23,8 +23,27 @@
     width: 100%;
     height: 5px;
     margin: 30px 0;
-    background-color: #8a8a8a;
+    background-color: black;
 }
+
+/* .sliderTrack {
+    position: absolute;
+    height: 3px;
+    background-color: #007bff;
+    z-index: 1;
+    top: 50%;
+    transform: translateY(-50%);
+} */
+.sliderTrack {
+    position: absolute;
+    height: 5px;
+    background-color: #007bff;
+    z-index: 1;
+    top: 50%;
+    transform: translateY(-50%);
+    border-radius: 5px;
+  }
+
 .priceSliders input {
     position: absolute;
     width: 100%;
@@ -34,6 +53,7 @@
     transform: translateY(-50%);
     appearance: none;
 }
+
 input[type="range"]::-webkit-slider-thumb {
     height: 15px;
     width: 15px;
@@ -42,7 +62,9 @@ input[type="range"]::-webkit-slider-thumb {
     pointer-events: auto;
     appearance: none;
     cursor: pointer;
+    z-index: 2;
 }
+
 .input-group {
     position: relative;
     display: flex;
@@ -50,6 +72,7 @@ input[type="range"]::-webkit-slider-thumb {
     align-items: stretch;
     width: 100%;
 }
+
 .currency {
     font-size: 1rem;
     font-weight: 400;
@@ -62,6 +85,7 @@ input[type="range"]::-webkit-slider-thumb {
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
 }
+
 .inputField {
     margin-left: -1px;
     padding: .425rem .75rem;
@@ -78,6 +102,7 @@ input[type="range"]::-webkit-slider-thumb {
     border-top-left-radius: 0;
     border-bottom-right-radius: 0;
 }
+
 .inputField:focus {
     outline: none;
 }
