router-links shopping cart

--- a/src/app/pages/panier/panier.component.html
+++ b/src/app/pages/panier/panier.component.html
@@ -24,4 +24,5 @@
         <app-coupon-code></app-coupon-code>
         <!--HERE THERE SHOULD BE THE ROW WITH THE SUBTOTAL COMPONENT-->
     </div>
+    <router-outlet></router-outlet>
 </div>
