--- a/src/app/pages/panier/sub-total/sub-total.component.html
+++ b/src/app/pages/panier/sub-total/sub-total.component.html
@@ -9,11 +9,11 @@
             <div class="card-body">
                 <div class="col">
                     <div class="row mb-3">
-                        <button type="button" class="btn btn-primary">Continue Shopping</button>
+                        <button type="button" [routerLink]="['/home']" class="btn btn-primary">Continue Shopping</button>
                     </div>
 
                     <a class="row mb-3">
-                        <button type="button" routerLink="cart/confirmationTransaction" class="btn btn-primary">Proceed to method of payment</button>
+                        <button type="button" [routerLink]="['/cart/formTransaction']" class="btn btn-primary">Proceed to method of payment</button>
                     </a>
                 </div>
             </div>
