--- a/src/app/pages/payment-matt/confirmation/payment-confirmation-matt/confirmation.component.html
+++ b/src/app/pages/payment-matt/confirmation/payment-confirmation-matt/confirmation.component.html
@@ -4,6 +4,6 @@
   <form class="form-design">
     <app-cart-confirmation></app-cart-confirmation>
     <app-cout-total-confirmation></app-cout-total-confirmation>
-    <button type="submit" class="button-close">Fermer cette fenêtre</button>
+    <a type="submit" [routerLink]="['/home']" class="button-close">Fermer cette fenêtre</a>
   </form>
 </div>
