--- a/src/app/pages/panier/sub-total/sub-total.component.html
+++ b/src/app/pages/panier/sub-total/sub-total.component.html
@@ -13,7 +13,7 @@
                     </div>
 
                     <a class="row mb-3">
-                        <button type="button" [routerLink]="['/cart/formTransaction']" class="btn btn-primary">Proceed to method of payment</button>
+                        <button type="button" [routerLink]="['/formTransaction']" class="btn btn-primary">Proceed to method of payment</button>
                     </a>
                 </div>
             </div>
