--- a/src/app/pages/payment-matt/info-card-payment/payment-alternate-shipping/payment-alternate-shipping.component.css
+++ b/src/app/pages/payment-matt/info-card-payment/payment-alternate-shipping/payment-alternate-shipping.component.css
@@ -74,7 +74,7 @@ input{
 }
 
 .narrow-input{
-    width:calc(50%-8px);
+    width: 200px;
     height: 40px;
     max-width:200px;
     padding:8px;
@@ -89,7 +89,9 @@ input{
 }
 
 .form-check input {
-    margin: 0;  
+    margin: 0;
+    height: 20px;  
+    width: 20px;
 }
 
 .form-check label {
