--- a/src/app/pages/payment-matt/info-card-payment/payment-choices/payment-choices.component.css
+++ b/src/app/pages/payment-matt/info-card-payment/payment-choices/payment-choices.component.css
@@ -74,7 +74,7 @@ input{
 }
 
 .narrow-input{
-    width:calc(50%-8px);
+    width:calc(50% - 8px);
     height: 40px;
     max-width:200px;
     padding:8px;
