--- a/src/app/pages/payment-matt/info-card-payment/payment-form-matt/payment-form.component.css
+++ b/src/app/pages/payment-matt/info-card-payment/payment-form-matt/payment-form.component.css
@@ -29,6 +29,8 @@ input{
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
     width: 90%;
     max-width: 800px;
+    justify-content: center;
+    align-items: center;
 }
 
 
@@ -36,6 +38,8 @@ input{
     background-color: #c4e0fd;
     border-radius: 10px;
     padding: 20px;
+    justify-content: center;
+    align-items: center;
 }
 
 .labels {
@@ -74,7 +78,7 @@ input{
 }
 
 .narrow-input{
-    width:calc(50%-8px);
+    width: 200px;;
     height: 40px;
     max-width:200px;
     padding:8px;
