changer le header pour quil y a un changement de couleur sur les svg au lieu dun box-shadow

--- a/src/app/pages/support-lion/support-lion.component.html
+++ b/src/app/pages/support-lion/support-lion.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid p-0">
+<div class="container-fluid p-0 m-0">
     <div class="row">
         <div class="col-xs-12">
             <img src="assets/images/support/support.jpg" class="support-image">
@@ -10,7 +10,7 @@
 
 <div class="container">
     <div class="row gy-5"><!--Beginning of column 1-->
-        <div class="col-12 col-sm col-md col-lg-2" style="border-radius: 15px;">
+        <div class="col-12 col-sm col-md col-lg-2">
             <div class="list-group" id="list-tab" role="tablist">
                 <a class="list-group-item list-group-item-action active" id="list-faq-list" data-bs-toggle="list"
                     href="#faq-section" role="tab" aria-controls="faq">FAQ</a>
