ajouter une fonction scroll up dans le footer, comme ca le lien support va toujours scroll up quand tu clique dessus

--- a/src/app/shared/footer-lion/footer.component.html
+++ b/src/app/shared/footer-lion/footer.component.html
@@ -29,7 +29,7 @@
                         <a href="#" class="text-reset">About Us</a>
                     </p>
                     <p>
-                        <a routerLink="/support"  class="text-reset">Contact Us</a>
+                        <a routerLink="/support" (click)="scrollUp()"  class="text-reset">Contact Us</a>
                     </p>
 
                 </div>
