creation d'interface et mock.json des coupons pour les rabais

--- a/src/app/pages/panier/item-in-cart/item-in-cart.component.html
+++ b/src/app/pages/panier/item-in-cart/item-in-cart.component.html
@@ -2,19 +2,16 @@
 <div class="row">
     <div class="col">
         <div class="row-card">
-            <div class="col" id="check">
-                <input type="checkbox">
-            </div>
             <div class="card mb-4" style="width:100%; height: auto">
                 <div class="row g-0">
                     <div class="col-md-4">
-                        <img src="./images/panier/candle.jpg" width="200" class="img-fluid rounded-start" alt="...">
+                        <img src="assets/images/categories/headphones.jpg" width="200" class="img-fluid rounded-start" alt="...">
                     </div>
 
                     <div class="col-md-8">
                         <div class="card-body">
-                            <h5 class="card-title">Candle</h5>
-                            <p class="card-text">Beautifully scented candle to lighten the mood.</p>
+                            <h5 class="card-title">Title product</h5>
+                            <p class="card-text">Description, or short description of product</p>
                             <div class="row">
                                 <div class="col">
                                     <select class="form-select" aria-label="Qty: 1">
@@ -25,13 +22,15 @@
                                 </div>
 
 
-                                <div class="col">
+                                <div class="col-2">
                                     <a href="#">Delete</a>
+                                </div>
+                                <div class="col-2">
                                     <a href="#">Share</a>
                                 </div>
 
                                 <div class="col" style="margin: 0">
-                                    <label><strong>$31.56</strong></label>
+                                    <label><strong>$ Price in Dollars</strong></label>
                                 </div>
                             </div>
                         </div>
