--- a/src/app/pages/panier/panier.component.html
+++ b/src/app/pages/panier/panier.component.html
@@ -2,11 +2,11 @@
     <div class="row">
         <h1 class="display-4">Shopping Cart</h1>
         <div class="col-2">
-            <button class="btn btn-secondary">Deselect all items</button>
+            <button class="btn btn-secondary">Delete all items</button>
         </div>
-
     </div>
 
+    <br>
     <div class="row">
             <div class="col-8">
                 <app-item-in-cart></app-item-in-cart>
