jai jouter un mini drop down menu a l'icon Account sur le header pour selectionner si on veux log in ou create account

--- a/src/app/pages/panier/coupon-code/coupon-code.component.html
+++ b/src/app/pages/panier/coupon-code/coupon-code.component.html
@@ -4,12 +4,12 @@
 
         <div class="row">
             <div class="col">
-                <input placeholder="Coupon Code" type="text" class="form form-control" style="width: 350px;">
+                <div class="input-group">
+                    <input placeholder="Coupon Code" type="text" class="form form-control" style="width: 350px;">
+                    <button type="button" class="btn btn-primary">Use Code</button>
+                </div>
             </div>
-            <div class="col-5">
-                <button type="button" class="btn btn-primary">Use Code</button>
-            </div>
-
+         
             <div class="col">
                 <!--probab utiliser un Ngif ici pour l'affichage du sous-total-->
                 <label><strong>Subtotal:</strong></label>
