--- a/src/app/pages/panier/sub-total/sub-total.component.html
+++ b/src/app/pages/panier/sub-total/sub-total.component.html
@@ -3,7 +3,7 @@
         <div class="card border-dark mb-3" style="max-width: 22rem; ">
             <label class="total-title">
                 <strong>
-                    <h2>Sous Total $31.56</h2>
+                    <h2>Sub Total in $</h2>
                 </strong>
             </label>
             <div class="card-body">
