--- a/src/app/pages/login-lion/login-lion.component.html
+++ b/src/app/pages/login-lion/login-lion.component.html
@@ -1,12 +1,4 @@
-<p>login-lion works!</p>
-<div class="row">
-    <div class="col-2">
-        <img src="/images/logo/Logo JX-HIFI.jpg">
-    </div>
-</div>
-
-
-
+<br>
 <!--Check with the mock list of users as well-->
 <!--Check if the ngIf is what is needed to validate the entry for a User-->
 <div class="login">
@@ -17,12 +9,12 @@
                     <div class="form-group">
                         <label for="exampleInputEmail1">Email address</label>
                         <input formControlName="logEmail" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                            placeholder="Enter email">
+                            >
                     </div>
                     <br>
                     <div class="form-group">
                         <label for="exampleInputPassword1">Password</label>
-                        <input formControlName="logPassword" type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                        <input formControlName="logPassword" type="password" class="form-control" id="exampleInputPassword1" >
                     </div>
                     <br>
                     <button type="submit" id="log" class="btn btn-primary">Submit</button>
