--- a/src/app/pages/panier/item-in-cart/item-in-cart.component.html
+++ b/src/app/pages/panier/item-in-cart/item-in-cart.component.html
@@ -14,11 +14,15 @@
                             <p class="card-text">Description, or short description of product</p>
                             <div class="row">
                                 <div class="col">
-                                    <select class="form-select" aria-label="Qty: 1">
-                                        <option>0 (Delete)</option>
-                                        <option selected>1</option>
-                                        <!--Probablement utiliser un NgFor pour une generation automatiser de 1-10-->
-                                    </select>
+                                    <div class="input-group">
+                                        <span class="input-group-text" id="basic-addon1">Qty:</span>
+                                        <select class="form-select" aria-label="Qty: 1">
+                                            <option>0 (Delete)</option>
+                                            <option selected>1</option>
+                                            <!--Probablement utiliser un NgFor pour une generation automatiser de 1-10-->
+                                        </select>
+                                    </div>
+                                    
                                 </div>
 
 
