--- a/src/app/shared/header-jean/header.component.css
+++ b/src/app/shared/header-jean/header.component.css
@@ -36,6 +36,30 @@
     color:rgb(0, 153, 255);
 }
 
+/*------------------------------*/
+
+.dropdown-item {
+    color: white;
+    font-weight: bold;
+    transition: background-color 0.3s ease, transform 0.2s ease;
+}
+
+.dropdown-item:hover {
+    background-color: rgb(0, 51, 253);
+    color: white;
+    transform: scale(1.05);
+    border-radius: 5px;
+}
+
+.dropdown-menu {
+    background-color: rgb(0, 51, 253);
+    padding: 10px;
+}
+
+/*--------------------------------------------------*/
+
+
+
 
 
 
