--- a/src/app/shared/header-jean/header.component.html
+++ b/src/app/shared/header-jean/header.component.html
@@ -28,17 +28,30 @@
                 </svg>
                 <div class="txtIcon">Stores</div>
             </a>
-            <a class="btnIcon text-center" href="">
-                <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path
-                        d="M20 20C24.1421 20 27.5 16.6421 27.5 12.5C27.5 8.35786 24.1421 5 20 5C15.8579 5 12.5 8.35786 12.5 12.5C12.5 16.6421 15.8579 20 20 20ZM25 12.5C25 15.2614 22.7614 17.5 20 17.5C17.2386 17.5 15 15.2614 15 12.5C15 9.73858 17.2386 7.5 20 7.5C22.7614 7.5 25 9.73858 25 12.5Z"
-                        fill="" />
-                    <path
-                        d="M35 32.5C35 35 32.5 35 32.5 35H7.5C7.5 35 5 35 5 32.5C5 30 7.5 22.5 20 22.5C32.5 22.5 35 30 35 32.5ZM32.4999 32.4913C32.4964 31.8743 32.1156 30.0261 30.4197 28.3303C28.7891 26.6996 25.7227 25 20 25C14.2772 25 11.2109 26.6996 9.58024 28.3303C7.88439 30.0261 7.50356 31.8743 7.5 32.4913H32.4999Z"
-                        fill="" />
-                </svg>
-                <div class="txtIcon">Account</div>
-            </a>
+           
+            <div class="dropdown text-center" style="padding-top: 6px;">
+                <a class="btnIcon text-center dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
+                    data-bs-toggle="dropdown" aria-expanded="false">
+                    <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M20 20C24.1421 20 27.5 16.6421 27.5 12.5C27.5 8.35786 24.1421 5 20 5C15.8579 5 12.5 8.35786 12.5 12.5C12.5 16.6421 15.8579 20 20 20ZM25 12.5C25 15.2614 22.7614 17.5 20 17.5C17.2386 17.5 15 15.2614 15 12.5C15 9.73858 17.2386 7.5 20 7.5C22.7614 7.5 25 9.73858 25 12.5Z"
+                            fill="" />
+                        <path
+                            d="M35 32.5C35 35 32.5 35 32.5 35H7.5C7.5 35 5 35 5 32.5C5 30 7.5 22.5 20 22.5C32.5 22.5 35 30 35 32.5ZM32.4999 32.4913C32.4964 31.8743 32.1156 30.0261 30.4197 28.3303C28.7891 26.6996 25.7227 25 20 25C14.2772 25 11.2109 26.6996 9.58024 28.3303C7.88439 30.0261 7.50356 31.8743 7.5 32.4913H32.4999Z"
+                            fill="" />
+                    </svg>
+                    <div class="txtIcon">Account</div>
+                </a>
+                <ul class="dropdown-menu text-center" aria-labelledby="dropdownMenuLink">
+                    <li><a class="dropdown-item" routerLink="/login">Log In</a></li>
+                    <li>
+                        <hr class="dropdown-divider">
+                    </li>
+                    <li><a class="dropdown-item" href="/create-account">Create Account</a></li>
+                </ul>
+            </div>
+
+            
             <a class="btnIcon text-center" routerLink="/cart">
             <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
