--- a/src/app/shared/header-jean/header.component.html
+++ b/src/app/shared/header-jean/header.component.html
@@ -44,10 +44,10 @@
                 </a>
                 <ul class="dropdown-menu text-center" aria-labelledby="dropdownMenuLink">
                     <li><a class="dropdown-item" routerLink="/login">Log In</a></li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
+                    <li><hr class="dropdown-divider"></li>
                     <li><a class="dropdown-item" href="/create-account">Create Account</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="/account-details">Account details</a></li>
                 </ul>
             </div>
 
