made minor aesthetic changes to panier page. J'ai aussi ajouter des fonctions dans item-cart component, et panier-component, et coupon-component

--- a/src/app/pages/panier/item-in-cart/item-in-cart.component.html
+++ b/src/app/pages/panier/item-in-cart/item-in-cart.component.html
@@ -27,10 +27,10 @@
 
 
                                 <div class="col-2">
-                                    <a href="#">Delete</a>
+                                    <button class="btn btn-outline-danger" (click)="deleteItem('000')">Delete</button>
                                 </div>
                                 <div class="col-2">
-                                    <a href="#">Share</a>
+                                    <button class="btn btn-outline-success">Share</button>
                                 </div>
 
                                 <div class="col" style="margin: 0">
