--- a/src/app/pages/create-account/create-account.component.html
+++ b/src/app/pages/create-account/create-account.component.html
@@ -1,3 +1,44 @@
-<div class="container">
+<br>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-12">
+                <div class="row text-center">
+                    <h1>Sign up</h1>
+                </div>
+                <form class="row g-3">
+                    <div class="row-12">
+                        <div class="form-group">
+                            <label for="exampleInputEmail1">Name</label>
+                            <input formControlName="logname" type="text" class="form-control" id="txtname" aria-describedby="nameHelp">
+                        </div>
+                    </div>
 
-</div>
+                    <div class="row-12">
+                        <div class="form-group">
+                            <label for="exampleInputEmail1">Email</label>
+                            <input formControlName="logEmail" type="email" class="form-control" id="txtemail" aria-describedby="emailHelp">
+                        </div>
+                    </div>
+                    
+                    <div class="row-12">
+                        <div class="form-group">
+                            <label for="exampleInputPassword1">Password</label>
+                            <input formControlName="logPassword" type="password" class="form-control" id="txtPass">
+                        </div>
+                    </div>
+
+                    <div class="row-12">
+                        <div class="form-group">
+                            <label for="exampleInputPassword1">Confirm Password</label>
+                            <input formControlName="confirmPassword" type="password" class="form-control" id="confirmPass">
+                        </div>
+                    </div>
+                   
+                    <div class="row-12 text-center">
+                        <button type="submit" id="log" class="btn btn-primary">Sign Up</button>
+                    </div>
+                </form>
+                <br>
+            </div>
+        </div>
+    </div>
