--- a/src/app/shared/header-jean/header.component.html
+++ b/src/app/shared/header-jean/header.component.html
@@ -47,7 +47,7 @@
                     <li><hr class="dropdown-divider"></li>
                     <li><a class="dropdown-item" routerLink="/create-account">Create Account</a></li>
                     <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="/account-details">Account details</a></li>
+                    <li><a class="dropdown-item" routerLink="/account-details">Account details</a></li>
                 </ul>
             </div>
 
@@ -72,14 +72,14 @@
 </div>
 
 <div class="navbar d-flex d-md-none container-fluid justify-content-around fixed-bottom p-2">
-    <a class="btnIcon text-center" href="">
+    <a class="btnIcon text-center" routerLink="/home">
         <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path
                 d="M21.7678 3.75012C20.7915 2.77381 19.2085 2.7738 18.2322 3.75012L1.61612 20.3662C1.12796 20.8544 1.12796 21.6458 1.61612 22.134C2.10427 22.6222 2.89573 22.6222 3.38388 22.134L5 20.5179V33.7501C5 35.8212 6.67893 37.5001 8.75 37.5001H31.25C33.3211 37.5001 35 35.8212 35 33.7501V20.5179L36.6161 22.134C37.1043 22.6222 37.8957 22.6222 38.3839 22.134C38.872 21.6458 38.872 20.8544 38.3839 20.3662L32.5 14.4823V6.25012C32.5 5.55976 31.9404 5.00012 31.25 5.00012H28.75C28.0596 5.00012 27.5 5.55976 27.5 6.25012V9.48235L21.7678 3.75012ZM32.5 18.0179V33.7501C32.5 34.4405 31.9404 35.0001 31.25 35.0001H8.75C8.05964 35.0001 7.5 34.4405 7.5 33.7501V18.0179L20 5.51788L32.5 18.0179Z"
                 fill="" />
         </svg>
     </a>
-    <a class="btnIcon text-center" href="">
+    <a class="btnIcon text-center" routerLink="/account-details">
         <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path
                 d="M20 20C24.1421 20 27.5 16.6421 27.5 12.5C27.5 8.35786 24.1421 5 20 5C15.8579 5 12.5 8.35786 12.5 12.5C12.5 16.6421 15.8579 20 20 20ZM25 12.5C25 15.2614 22.7614 17.5 20 17.5C17.2386 17.5 15 15.2614 15 12.5C15 9.73858 17.2386 7.5 20 7.5C22.7614 7.5 25 9.73858 25 12.5Z"
