--- a/src/app/pages/account-details/account-details.component.html
+++ b/src/app/pages/account-details/account-details.component.html
@@ -1,1 +1,4 @@
-<p>account-details works!</p>
+<div class="container">
+    <app-account-sidebar></app-account-sidebar>
+    <!--DisplayInformation-->
+</div>
