--- a/src/app/pages/panier/sub-total/sub-total.component.html
+++ b/src/app/pages/panier/sub-total/sub-total.component.html
@@ -9,7 +9,7 @@
             <div class="card-body">
                 <div class="col">
                     <div class="row mb-3">
-                        <button type="button" [routerLink]="['/home']" class="btn btn-primary">Continue Shopping</button>
+                        <button type="button" [routerLink]="['/home']" class="btn btn-outline-primary">Continue Shopping</button>
                     </div>
 
                     <a class="row mb-3">
