created a display-info component in account-details, might delete later

--- a/src/app/pages/account-details/account-details.component.html
+++ b/src/app/pages/account-details/account-details.component.html
@@ -1,4 +1,5 @@
 <div class="container">
     <app-account-sidebar></app-account-sidebar>
     <!--DisplayInformation-->
+    <app-display-info></app-display-info>
 </div>
