jai changer la flech sur le header for monsegnior Jean

--- a/src/app/shared/header-jean/header.component.html
+++ b/src/app/shared/header-jean/header.component.html
@@ -30,7 +30,7 @@
             </a>
            
             <div class="dropdown text-center" style="padding-top: 6px;">
-                <a class="btnIcon text-center dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
+                <a class="btnIcon text-center" href="#" role="button" id="dropdownMenuLink"
                     data-bs-toggle="dropdown" aria-expanded="false">
                     <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
@@ -40,7 +40,7 @@
                             d="M35 32.5C35 35 32.5 35 32.5 35H7.5C7.5 35 5 35 5 32.5C5 30 7.5 22.5 20 22.5C32.5 22.5 35 30 35 32.5ZM32.4999 32.4913C32.4964 31.8743 32.1156 30.0261 30.4197 28.3303C28.7891 26.6996 25.7227 25 20 25C14.2772 25 11.2109 26.6996 9.58024 28.3303C7.88439 30.0261 7.50356 31.8743 7.5 32.4913H32.4999Z"
                             fill="" />
                     </svg>
-                    <div class="txtIcon">Account</div>
+                    <div class="txtIcon dropdown-toggle">Account</div>
                 </a>
                 <ul class="dropdown-menu text-center" aria-labelledby="dropdownMenuLink">
                     <li><a class="dropdown-item" routerLink="/login">Log In</a></li>
