--- a/src/app/pages/account-details/account-sidebar/account-sidebar.component.html
+++ b/src/app/pages/account-details/account-sidebar/account-sidebar.component.html
@@ -3,7 +3,7 @@
             <div class="col">
                 <ul class="nav flex-column">
                     <li class="nav-item mt-5 mb-3">
-                        <a href="#" routerLinkActive="active" class="nav-link link-body-emphasis">
+                        <a href="#test" class="nav-link link-body-emphasis">
                             <svg xmlns="http://www.w3.org/2000/svg" width="30" height="36" fill="currentColor"
                                 class="bi bi-file-person" viewBox="0 0 16 16">
                                 <path
@@ -13,7 +13,7 @@
                         </a>
                     </li>
                     <li class="nav-item mb-3">
-                        <a href="#" routerLinkActive="active" class="nav-link link-body-emphasis">
+                        <a href="#" class="nav-link link-body-emphasis">
                             <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="black" class="bi bi-bag-check"
                                 viewBox="0 0 16 16">
                                 <path fill-rule="evenodd"
@@ -24,7 +24,7 @@
                         </a>
                     </li>
                     <li class="nav-item mb-3">
-                        <a href="#" routerLinkActive="active" class="nav-link link-body-emphasis">
+                        <a href="#" class="nav-link link-body-emphasis">
                             <svg xmlns="http://www.w3.org/2000/svg" width="36" height="30" fill="currentColor"
                                 class="bi bi-credit-card" viewBox="0 0 16 16">
                                 <path
@@ -35,7 +35,7 @@
                     </li>
             
                     <li class="nav-item">
-                        <a href="#" routerLink="/home" class="nav-link link-body-emphasis mt-3">
+                        <a href="#"  class="nav-link link-body-emphasis mt-3">
                             <svg xmlns="http://www.w3.org/2000/svg" width="30" height="36" fill="currentColor"
                                 class="bi bi-door-open" viewBox="0 0 16 16">
                                 <path d="M8.5 10c-.276 0-.5-.448-.5-1s.224-1 .5-1 .5.448.5 1-.224 1-.5 1" />
@@ -50,3 +50,5 @@
         </div>
     </div>
     
+
+    <app-display-info #test></app-display-info>
