--- a/src/app/pages/detail-category-jean/detail-category-child-jean/product-filter-jean/product-filter-jean.component.css
+++ b/src/app/pages/detail-category-jean/detail-category-child-jean/product-filter-jean/product-filter-jean.component.css
@@ -22,27 +22,9 @@
     position: relative;
     width: 100%;
     height: 5px;
-    margin: 30px 0;
+    margin: 1rem auto;
     background-color: black;
 }
-
-/* .sliderTrack {
-    position: absolute;
-    height: 3px;
-    background-color: #007bff;
-    z-index: 1;
-    top: 50%;
-    transform: translateY(-50%);
-} */
-.sliderTrack {
-    position: absolute;
-    height: 5px;
-    background-color: #007bff;
-    z-index: 1;
-    top: 50%;
-    transform: translateY(-50%);
-    border-radius: 5px;
-  }
 
 .priceSliders input {
     position: absolute;
@@ -63,46 +45,4 @@ input[type="range"]::-webkit-slider-thumb {
     appearance: none;
     cursor: pointer;
     z-index: 2;
-}
-
-.input-group {
-    position: relative;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: stretch;
-    width: 100%;
-}
-
-.currency {
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.5;
-    color: #4b566b;
-    white-space: nowrap;
-    background-color: white;
-    border: 1px solid #d4d7e5;
-    border-radius: .25rem;
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
-}
-
-.inputField {
-    margin-left: -1px;
-    padding: .425rem .75rem;
-    font-size: 1rem;
-    border-radius: .25rem;
-    position: relative;
-    flex: 1 1 auto;
-    width: 1%;
-    min-width: 0;
-    color: #4b566b;
-    background-color: white;
-    background-clip: padding-box;
-    border: 1px solid #d4d7e5;
-    border-top-left-radius: 0;
-    border-bottom-right-radius: 0;
-}
-
-.inputField:focus {
-    outline: none;
 }
