--- a/src/app/pages/detail-category-jean/detail-category-child-jean/product-filter-jean/product-filter-jean.component.html
+++ b/src/app/pages/detail-category-jean/detail-category-child-jean/product-filter-jean/product-filter-jean.component.html
@@ -5,7 +5,8 @@
             <h5>Brand</h5>
             <div class="filterChoice">
                 <div class="form-check" *ngFor="let brand of brands">
-                    <input class="form-check-input" type="checkbox" id="{{brand}}" (change)="onBrandChange($event, brand)">
+                    <input class="form-check-input" type="checkbox" id="{{brand}}" [checked]="selectedBrands.has(brand)"
+                        (change)="onBrandChecked($event, brand)">
                     <label class="form-check-label" for="{{brand}}">{{brand}}</label>
                 </div>
             </div>
@@ -16,7 +17,8 @@
             <h5>Color</h5>
             <div class="filterChoice">
                 <div class="form-check" *ngFor="let color of colors">
-                    <input class="form-check-input" type="checkbox" id="{{color}}" (change)="onColorChange($event, color)">
+                    <input class="form-check-input" type="checkbox" id="{{color}}" [checked]="selectedColors.has(color)"
+                        (change)="onColorChecked($event, color)">
                     <label class="form-check-label" for="{{color}}">{{color}}</label>
                 </div>
             </div>
@@ -27,18 +29,14 @@
             <h5>Maximum Price</h5>
             <div class="input-group">
                 <span class="input-group-text fw-bold">$</span>
-                <input type="number" class="form-control w-75 txtMaxVal" [(ngModel)]="maxTxtPrice"
-                    (change)="onMaxPriceChange()" />
+                <input type="number" class="form-control w-75 txtMaxVal" [(ngModel)]="selectedMaxPrice"
+                    (change)="onMaxPriceChange()" [min]="minPrice" [max]="maxPrice" />
             </div>
 
             <div class="priceSliders">
-                <input type="range" class="slideMaxVal" [min]="minSlider" [max]="maxSlider" [(ngModel)]="maxTxtPrice"
-                    (input)="onMaxPriceChange()" />
+                <input type="range" class="slideMaxVal" [(ngModel)]="selectedMaxPrice" (input)="onMaxPriceChange()"
+                    [min]="minPrice" [max]="maxPrice" />
             </div>
         </div>
-        <div class="d-flex justify-content-center">
-            <button class="btn btn-primary w-50 mt-3" (click)="applyNewFilter()">Apply</button>
-        </div>
-
     </div>
 </div>
