--- a/src/app/pages/account-details/account-sidebar/account-sidebar.component.html
+++ b/src/app/pages/account-details/account-sidebar/account-sidebar.component.html
@@ -3,7 +3,7 @@
             <div class="col">
                 <ul class="nav flex-column">
                     <li class="nav-item mt-5 mb-3">
-                        <a href="#test" class="nav-link link-body-emphasis">
+                        <a role="button" routerLink="/account-details/personalInfo"  routerLinkActive="active" class="nav-link link-body-emphasis" >
                             <svg xmlns="http://www.w3.org/2000/svg" width="30" height="36" fill="currentColor"
                                 class="bi bi-file-person" viewBox="0 0 16 16">
                                 <path
@@ -49,6 +49,7 @@
             </div>
         </div>
     </div>
+
     
 
-    <app-display-info #test></app-display-info>
+    
