--- a/src/app/pages/account-details/account-details.component.html
+++ b/src/app/pages/account-details/account-details.component.html
@@ -4,10 +4,8 @@
             <app-account-sidebar></app-account-sidebar>
         </div>
         
-        <div class="col-8 justify-content-center">
-            <div class="content">
-                <router-outlet></router-outlet>
-            </div>
+        <div class="col-8 p-0">
+            <router-outlet></router-outlet>
         </div>
     </div>
 </div>
