--- a/src/app/pages/account-details/account-sidebar/account-sidebar.component.html
+++ b/src/app/pages/account-details/account-sidebar/account-sidebar.component.html
@@ -13,7 +13,7 @@
                         </a>
                     </li>
                     <li class="nav-item mb-3">
-                        <a href="#" class="nav-link link-body-emphasis">
+                        <a role="button" routerLink="/account-details/orders" class="nav-link link-body-emphasis">
                             <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="black" class="bi bi-bag-check"
                                 viewBox="0 0 16 16">
                                 <path fill-rule="evenodd"
