--- a/src/app/pages/account-details/personal-info/personal-info.component.html
+++ b/src/app/pages/account-details/personal-info/personal-info.component.html
@@ -1,14 +1,48 @@
-<div class="content">
-    <div id="personalInformation" class="collapse">
-        <div class="container">
-            <div class="col-12">
-                <div class="row">First Name</div>
-                <div class="row">Last Name</div>
-                <div class="row">Email</div>
-                <div class="row">Phone</div>
-                <div class="row">Address</div>
-                <div class="row">City</div>
-                <div class="row">Country</div>
+<div class="container-fluid p-0">
+    <div *ngIf="user" class="row align-items-center py-5">
+            <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">{{user.firstName}} {{user.lastName}}</h1>
+        
+
+        <div class="col-12 col-md-10 col-lg-11">
+            <form class="p-4 border rounded shadow-sm bg-light">
+                <div class="row g-4">
+                    <div class="col">
+                        <div class="mb-3">
+                            <label for="lastName" class="form-label fw-semibold">Nom</label>
+                            <input type="text" class="form-control" id="lastName" [(ngModel)]="user.lastName" name="lastName">
+                        </div>
+                        <div class="mb-3">
+                            <label for="firstName" class="form-label fw-semibold">Prénom</label>
+                            <input type="text" class="form-control" id="firstName" [(ngModel)]="user.firstName" name="firstName">
+                        </div>
+                        <div class="mb-3">
+                            <label for="email" class="form-label fw-semibold">Email</label>
+                            <input type="text" class="form-control" id="email" [(ngModel)]="user.email" name="email">
+                        </div>
+                        <div class="mb-3">
+                            <label for="password" class="form-label fw-semibold">Mot de passe</label>
+                            <input type="password" class="form-control" id="password" [(ngModel)]="user.password" name="password">
+                        </div>
+                        <div class="mb-3">
+                            <label for="phone" class="form-label fw-semibold">Téléphone</label>
+                            <input type="text" class="form-control" id="phone" [(ngModel)]="user.phone" name="phone">
+                        </div>
+                    </div>
+                    
+                    
+                    <div class="col-12 col-md-6">
+                        <div *ngFor="let detail of addressDetail" class="mb-3">
+                            <label for="{{detail.label}}" class="form-label fw-semibold">{{detail.label}}</label>
+                            <input type="text" class="form-control" id="address" [(ngModel)]="detail.value" name="{{detail.label}}">
+                        </div>
+                    </div>
+                </div>
+            </form>
+
+            <div class="d-grid gap-2 d-md-flex justify-content-start mt-4">
+                <button routerLink="/admin/users" type="button"
+                    class="btn btn-secondary btn-lg px-4 me-md-2">Retour</button>
+                <button type="button" class="btn btn-success btn-lg px-4 me-md-2" >Modifier</button>
             </div>
         </div>
     </div>
