--- a/src/app/pages/account-details/orders/orders.component.html
+++ b/src/app/pages/account-details/orders/orders.component.html
@@ -1,4 +1,20 @@
-<div class="main-content-wrapper">
-   
+<table class="table table-striped table-bordered">
+    <thead>
+        <tr>
+            <th>Id Order</th>
+            <th>Number of items</th>
+            <th>Total</th>
+            <th>Card ending in</th>
+            <th>Status</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let i of orderList">
+            <td>{{i.id}}</td>
+            <td>{{i.orderItems.length}}</td>
+            <td>{{i.totalAmount}}</td>
+            <td>{{i.status}}</td>
+        </tr>
+    </tbody>
+</table>
 
-</div>
